packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsDmlStatementsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlStatementsMax__c</fullName>
    <description>Maximum DML statements limit.</description>
    <inlineHelpText>Maximum DML statements limit.</inlineHelpText>
    <label>DML Statements Max</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>