packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsEmailInvocations__c.field-meta.xml
<CustomField>
    <fullName>LimitsEmailInvocations__c</fullName>
    <description>Email Invocations usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsEmailInvocationsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsEmailInvocationsConsumed__c / LimitsEmailInvocationsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.EmailInvocations.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsEmailInvocationsConsumed__c / LimitsEmailInvocationsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.EmailInvocations.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsEmailInvocationsConsumed__c / LimitsEmailInvocationsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsEmailInvocationsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsEmailInvocationsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email Invocations usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Email Invocations</label>
    <type>Text</type>
</CustomField>