packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsEmailInvocationsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsEmailInvocationsConsumed__c</fullName>
    <description>Email invocations consumed during transaction.</description>
    <inlineHelpText>Email invocations consumed during transaction.</inlineHelpText>
    <label>Email Invocations Consumed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>