packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsEmailInvocationsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsEmailInvocationsMax__c</fullName>
    <description>Maximum email invocations limit.</description>
    <inlineHelpText>Maximum email invocations limit.</inlineHelpText>
    <label>Email Invocations Max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>