packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsFutureCallsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsFutureCallsConsumed__c</fullName>
    <description>Future calls consumed during transaction.</description>
    <inlineHelpText>Future calls consumed during transaction.</inlineHelpText>
    <label>Future Calls Consumed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>