packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsFutureCallsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsFutureCallsMax__c</fullName>
    <description>Maximum future calls limit.</description>
    <inlineHelpText>Maximum future calls limit.</inlineHelpText>
    <label>Future Calls Max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>