packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsHeapSize__c.field-meta.xml
<CustomField>
    <fullName>LimitsHeapSize__c</fullName>
    <description>Heap Size usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsHeapSizeMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsHeapSizeConsumed__c / LimitsHeapSizeMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.HeapSize.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsHeapSizeConsumed__c / LimitsHeapSizeMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.HeapSize.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsHeapSizeConsumed__c / LimitsHeapSizeMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsHeapSizeConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsHeapSizeMax__c) &amp; &quot; bytes)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Heap Size usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Heap Size</label>
    <type>Text</type>
</CustomField>