packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsHeapSizeConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsHeapSizeConsumed__c</fullName>
    <description>Heap size consumed during transaction (bytes).</description>
    <inlineHelpText>Heap size consumed during transaction (bytes).</inlineHelpText>
    <label>Heap Size Consumed (bytes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>