packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsHeapSizeMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsHeapSizeMax__c</fullName>
    <description>Maximum heap size limit (bytes).</description>
    <inlineHelpText>Maximum heap size limit (bytes).</inlineHelpText>
    <label>Heap Size Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>