packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsMobilePushApexCalls__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCalls__c</fullName>
    <description>Mobile Push Apex Calls usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsMobilePushApexCallsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsMobilePushApexCallsConsumed__c / LimitsMobilePushApexCallsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.MobilePushApexCalls.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsMobilePushApexCallsConsumed__c / LimitsMobilePushApexCallsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.MobilePushApexCalls.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsMobilePushApexCallsConsumed__c / LimitsMobilePushApexCallsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsMobilePushApexCallsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsMobilePushApexCallsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mobile Push Apex Calls usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Mobile Push Apex Calls</label>
    <type>Text</type>
</CustomField>