packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsMobilePushApexCallsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCallsConsumed__c</fullName>
    <description>Mobile push Apex calls consumed during transaction.</description>
    <inlineHelpText>Mobile push Apex calls consumed during transaction.</inlineHelpText>
    <label>Mobile Push Apex Calls Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>