packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsMobilePushApexCallsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCallsMax__c</fullName>
    <description>Maximum mobile push Apex calls limit.</description>
    <inlineHelpText>Maximum mobile push Apex calls limit.</inlineHelpText>
    <label>Mobile Push Apex Calls Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>