packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsPublishImmediateDml__c.field-meta.xml
<CustomField>
    <fullName>LimitsPublishImmediateDml__c</fullName>
    <description>Publish Immediate DML usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsPublishImmediateDmlMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsPublishImmediateDmlConsumed__c / LimitsPublishImmediateDmlMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.PublishImmediateDml.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsPublishImmediateDmlConsumed__c / LimitsPublishImmediateDmlMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.PublishImmediateDml.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsPublishImmediateDmlConsumed__c / LimitsPublishImmediateDmlMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsPublishImmediateDmlConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsPublishImmediateDmlMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Publish Immediate DML usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Publish Immediate DML</label>
    <type>Text</type>
</CustomField>