packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsPublishImmediateDmlConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsPublishImmediateDmlConsumed__c</fullName>
    <description>Publish immediate DML operations consumed during transaction.</description>
    <inlineHelpText>Publish immediate DML operations consumed during transaction.</inlineHelpText>
    <label>Publish Immediate DML Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>