packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsPublishImmediateDmlMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsPublishImmediateDmlMax__c</fullName>
    <description>Maximum publish immediate DML operations limit.</description>
    <inlineHelpText>Maximum publish immediate DML operations limit.</inlineHelpText>
    <label>Publish Immediate DML Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>