packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsQueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueryLocatorRows__c</fullName>
    <description>Query Locator Rows usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsQueryLocatorRowsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsQueryLocatorRowsConsumed__c / LimitsQueryLocatorRowsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.QueryLocatorRows.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsQueryLocatorRowsConsumed__c / LimitsQueryLocatorRowsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.QueryLocatorRows.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsQueryLocatorRowsConsumed__c / LimitsQueryLocatorRowsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsQueryLocatorRowsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsQueryLocatorRowsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Query Locator Rows usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Query Locator Rows</label>
    <type>Text</type>
</CustomField>