packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsQueryLocatorRowsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueryLocatorRowsConsumed__c</fullName>
    <description>Query locator rows consumed during transaction.</description>
    <inlineHelpText>Query locator rows consumed during transaction.</inlineHelpText>
    <label>Query Locator Rows Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>