packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsQueryLocatorRowsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueryLocatorRowsMax__c</fullName>
    <description>Maximum query locator rows limit.</description>
    <inlineHelpText>Maximum query locator rows limit.</inlineHelpText>
    <label>Query Locator Rows Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>