packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsQueueableJobs__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueueableJobs__c</fullName>
    <description>Queueable Jobs usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsQueueableJobsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsQueueableJobsConsumed__c / LimitsQueueableJobsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.QueueableJobs.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsQueueableJobsConsumed__c / LimitsQueueableJobsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.QueueableJobs.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsQueueableJobsConsumed__c / LimitsQueueableJobsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsQueueableJobsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsQueueableJobsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Queueable Jobs usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Queueable Jobs</label>
    <type>Text</type>
</CustomField>