packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsQueueableJobsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueueableJobsConsumed__c</fullName>
    <description>Queueable jobs consumed during transaction.</description>
    <inlineHelpText>Queueable jobs consumed during transaction.</inlineHelpText>
    <label>Queueable Jobs Consumed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>