packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsQueueableJobsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueueableJobsMax__c</fullName>
    <description>Maximum queueable jobs limit.</description>
    <inlineHelpText>Maximum queueable jobs limit.</inlineHelpText>
    <label>Queueable Jobs Max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>