packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsSoqlQueries__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueries__c</fullName>
    <description>SOQL Queries usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsSoqlQueriesMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsSoqlQueriesConsumed__c / LimitsSoqlQueriesMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoqlQueries.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsSoqlQueriesConsumed__c / LimitsSoqlQueriesMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoqlQueries.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsSoqlQueriesConsumed__c / LimitsSoqlQueriesMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsSoqlQueriesConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsSoqlQueriesMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SOQL Queries usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>SOQL Queries</label>
    <type>Text</type>
</CustomField>