packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsSoqlQueriesConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueriesConsumed__c</fullName>
    <description>SOQL queries consumed during transaction.</description>
    <inlineHelpText>SOQL queries consumed during transaction.</inlineHelpText>
    <label>SOQL Queries Consumed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>