packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsSoqlQueriesMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueriesMax__c</fullName>
    <description>Maximum SOQL queries limit.</description>
    <inlineHelpText>Maximum SOQL queries limit.</inlineHelpText>
    <label>SOQL Queries Max</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>