packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsSoqlRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlRows__c</fullName>
    <description>SOQL Rows usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsSoqlRowsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsSoqlRowsConsumed__c / LimitsSoqlRowsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoqlRows.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsSoqlRowsConsumed__c / LimitsSoqlRowsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoqlRows.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsSoqlRowsConsumed__c / LimitsSoqlRowsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsSoqlRowsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsSoqlRowsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SOQL Rows usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>SOQL Rows</label>
    <type>Text</type>
</CustomField>