packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsSoqlRowsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlRowsConsumed__c</fullName>
    <description>SOQL rows consumed during transaction.</description>
    <inlineHelpText>SOQL rows consumed during transaction.</inlineHelpText>
    <label>SOQL Rows Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>