packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsSoqlRowsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlRowsMax__c</fullName>
    <description>Maximum SOQL rows limit.</description>
    <inlineHelpText>Maximum SOQL rows limit.</inlineHelpText>
    <label>SOQL Rows Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>