packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsSoslSearches__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoslSearches__c</fullName>
    <description>SOSL Searches usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsSoslSearchesMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsSoslSearchesConsumed__c / LimitsSoslSearchesMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoslSearches.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsSoslSearchesConsumed__c / LimitsSoslSearchesMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoslSearches.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsSoslSearchesConsumed__c / LimitsSoslSearchesMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsSoslSearchesConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsSoslSearchesMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SOSL Searches usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>SOSL Searches</label>
    <type>Text</type>
</CustomField>