packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsSoslSearchesConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoslSearchesConsumed__c</fullName>
    <description>SOSL searches consumed during transaction.</description>
    <inlineHelpText>SOSL searches consumed during transaction.</inlineHelpText>
    <label>SOSL Searches Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>