packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsSoslSearchesMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoslSearchesMax__c</fullName>
    <description>Maximum SOSL searches limit.</description>
    <inlineHelpText>Maximum SOSL searches limit.</inlineHelpText>
    <label>SOSL Searches Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>