packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LoginType__c.field-meta.xml
<CustomField>
    <fullName>LoginType__c</fullName>
    <description>How the user authenticated (e.g., Application, SAML, OAuth).</description>
    <inlineHelpText>How the user authenticated (e.g., Application, SAML, OAuth).</inlineHelpText>
    <label>Login Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>