packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/MaskingApplied__c.field-meta.xml
<CustomField>
    <fullName>MaskingApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if data masking was applied to any records in this transaction.</description>
    <inlineHelpText>Indicates if data masking was applied to any records in this transaction.</inlineHelpText>
    <label>Masking Applied</label>
    <type>Checkbox</type>
</CustomField>