packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <description>JSON array of transaction messages.</description>
    <inlineHelpText>JSON array of transaction messages.</inlineHelpText>
    <label>Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>