packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/NotificationSummary__c.field-meta.xml
<CustomField>
    <fullName>NotificationSummary__c</fullName>
    <description>Summary of Notification work item execution status with sent/failure counts.</description>
    <formula>IF(TotalNotificationsPlanned__c = 0,
    &quot;&quot;,
    IF(TotalNotificationsPlanned__c = TotalNotificationsProcessed__c &amp;&amp; TotalNotificationsSent__c = TotalNotificationsProcessed__c,
        &quot;✅ &quot; &amp; TEXT(TotalNotificationsSent__c) &amp; &quot; sent&quot;,
        IF(TotalNotificationsProcessed__c &gt; 0 &amp;&amp; TotalNotificationsSent__c = 0,
            &quot;❌ &quot; &amp; TEXT(TotalNotificationsProcessed__c) &amp; &quot; failed&quot;,
            IF(TotalNotificationsProcessed__c = 0,
                &quot;⏸️ &quot; &amp; TEXT(TotalNotificationsPlanned__c) &amp; &quot; planned, not executed&quot;,
                &quot;⚠️ &quot; &amp; TEXT(TotalNotificationsSent__c) &amp; &quot;/&quot; &amp; TEXT(TotalNotificationsPlanned__c) &amp; &quot; sent&quot; &amp;
                IF(TotalNotificationsProcessed__c - TotalNotificationsSent__c &gt; 0,
                    &quot; (&quot; &amp; TEXT(TotalNotificationsProcessed__c - TotalNotificationsSent__c) &amp; &quot; failed&quot; &amp;
                    IF(TotalNotificationsPlanned__c - TotalNotificationsProcessed__c &gt; 0,
                        &quot;, &quot; &amp; TEXT(TotalNotificationsPlanned__c - TotalNotificationsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;)&quot;
                    ),
                    IF(TotalNotificationsPlanned__c - TotalNotificationsProcessed__c &gt; 0,
                        &quot; (&quot; &amp; TEXT(TotalNotificationsPlanned__c - TotalNotificationsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;&quot;
                    )
                )
            )
        )
    )
)</formula>
    <inlineHelpText>Summary of Notification work item execution status.</inlineHelpText>
    <label>Notification Summary</label>
    <type>Text</type>
</CustomField>