packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationId__c</fullName>
    <description>Salesforce Organization ID where the transaction executed.</description>
    <inlineHelpText>Salesforce Organization ID where the transaction executed.</inlineHelpText>
    <label>Organization ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>