packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/OrganizationInstanceName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationInstanceName__c</fullName>
    <description>Salesforce instance name (e.g., NA1, EU5, CS42).</description>
    <inlineHelpText>Salesforce instance name (e.g., NA1, EU5, CS42).</inlineHelpText>
    <label>Organization Instance Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>