packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/OrganizationIsSandbox__c.field-meta.xml
<CustomField>
    <fullName>OrganizationIsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the transaction executed in a sandbox environment.</description>
    <inlineHelpText>Indicates whether the transaction executed in a sandbox environment.</inlineHelpText>
    <label>Organization Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>