packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationName__c</fullName>
    <description>Name of the Salesforce organization where the transaction executed.</description>
    <inlineHelpText>Name of the Salesforce organization where the transaction executed.</inlineHelpText>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>