packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ParentTransaction__c.field-meta.xml
<CustomField>
    <fullName>ParentTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Transaction</label>
    <referenceTo>UoWAuditTransaction__c</referenceTo>
    <relationshipName>UoWAuditTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>