packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ParentTransactionId__c.field-meta.xml
<CustomField>
    <fullName>ParentTransactionId__c</fullName>
    <description>External transaction ID of the parent transaction. Used for deferred lookup resolution when parent audit record may not exist yet due to platform event timing.</description>
    <inlineHelpText>The transaction ID of the parent transaction (if this is a child transaction)</inlineHelpText>
    <label>Parent Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>