packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/PolicyCount__c.field-meta.xml
<CustomField>
    <fullName>PolicyCount__c</fullName>
    <description>Number of policies evaluated for this transaction.</description>
    <inlineHelpText>Number of policies evaluated for this transaction.</inlineHelpText>
    <label>Policy Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>