packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/PolicyEvaluations__c.field-meta.xml
<CustomField>
    <fullName>PolicyEvaluations__c</fullName>
    <description>JSON array of individual policy evaluations.</description>
    <inlineHelpText>JSON array of individual policy evaluations.</inlineHelpText>
    <label>Policy Evaluations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>