packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/PolicyEvaluationSummary__c.field-meta.xml
<CustomField>
    <fullName>PolicyEvaluationSummary__c</fullName>
    <description>Full policy evaluation summary as JSON</description>
    <inlineHelpText>Full policy evaluation summary as JSON</inlineHelpText>
    <label>Policy Evaluation Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>