packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <color>#990000</color>
                <label>Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#FF0000</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#F3D904</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>