packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <description>Unique identifier for the Salesforce request/transaction - populated when calling System.Request.getCurrent().getRequestId()</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the Salesforce request/transaction - populated when calling System.Request.getCurrent().getRequestId()</inlineHelpText>
    <label>Request ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>