packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/RequiresApproval__c.field-meta.xml
<CustomField>
    <fullName>RequiresApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the transaction required human approval.</description>
    <inlineHelpText>Indicates if the transaction required human approval.</inlineHelpText>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>