packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/RetentionDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionDays__c</fullName>
    <description>Number of days to retain this audit record. Copied from configuration at creation time. Used by archival job to determine when to archive/delete.</description>
    <inlineHelpText>Days until this record is eligible for archival/deletion.</inlineHelpText>
    <label>Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>