packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/RiskAssessmentDetails__c.field-meta.xml
<CustomField>
    <fullName>RiskAssessmentDetails__c</fullName>
    <description>Full risk assessment details as JSON</description>
    <inlineHelpText>Full risk assessment details as JSON</inlineHelpText>
    <label>Risk Assessment Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>